# Shopakk

./: README.md  pyproject.toml
server/: .env  alembic.ini  main.py  server.py  settings.py
server/alembic/: __init__.py  env.py
server/alembic/versions/: 155cd2eabb10_create_models.py  7905e7a36b00_init_alembic.py
server/api/v1/characteristics/: schemas.py
server/api/v1/images/: schemas.py
server/api/v1/products/: schemas.py  setup.py  views.py
server/api/v1/security/: JWT.py  auth.py  cookie.py  manager.py  models.py  views.py
server/api/v1/users/: schemas.py  setup.py  views.py
server/core/: setup.py
server/core/models/: __init__.py  address.py  basket.py  basket_prooduct.py  characteristic.py  image.py  product.py  user.py  wishlist.py  wishlist_product.py  wishllist_product.py
