[tool.poetry]
name = "shopakk"
version = "0.1.0"
description = ""
authors = ["T_X <treider.xylioner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "^23.3.1"
poetry = "^1.7.1"
environs = "^9.5.0"
fastapi = "^0.104.1"
pydantic = "^2.5.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
